--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.0.6",
     "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.14.2",
+    "@mui/x-date-pickers": "^6.11.0",
     "@prisma/client": "^5.0.0",
     "@progress/kendo-date-math": "^1.5.11",
     "@progress/kendo-licensing": "^1.3.1",
@@ -34,6 +39,8 @@
     "@tabler/icons-react": "^2.29.0",
     "firebase": "^10.1.0",
     "js-cookie": "^3.0.5",
+    "mdb-react-ui-kit": "^6.2.0",
+    "moment": "^2.29.4",
     "next": "^12.3.4",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
