--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
+    "@js-temporal/polyfill": "^0.4.4",
     "@material-tailwind/react": "^2.0.6",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/joy": "^5.0.0-beta.2",
     "@mui/lab": "^5.0.0-alpha.137",
-    "@mui/material": "^5.14.2",
+    "@mui/material": "^5.14.4",
     "@mui/x-date-pickers": "^6.11.0",
     "@prisma/client": "^5.0.0",
     "@progress/kendo-date-math": "^1.5.11",
@@ -38,17 +41,23 @@
     "@progress/kendo-theme-default": "^6.6.0",
     "@tabler/icons-react": "^2.29.0",
     "firebase": "^10.1.0",
+    "googleapis": "^124.0.0",
     "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^6.2.0",
     "moment": "^2.29.4",
     "next": "^12.3.4",
+    "nextjs-websocket": "^1.0.11",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.10.1",
-    "smart-webcomponents-react": "^15.2.11"
+    "react-number-format": "^5.3.0",
+    "smart-webcomponents-react": "^15.2.11",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/node": "20.4.5",
