--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/CogniraApp?schema=public"
+# WDS_SOCKET_PORT=443
+  
