--- a/package.json
+++ b/package.json
@@ -40,12 +40,19 @@
     "@progress/kendo-svg-icons": "^1.8.0",
     "@progress/kendo-theme-default": "^6.6.0",
     "@tabler/icons-react": "^2.29.0",
+    "@types/gapi.auth2": "^0.0.57",
+    "axios": "^1.4.0",
     "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
+    "framer": "^2.3.0",
+    "google-auth-library": "^9.0.0",
     "googleapis": "^124.0.0",
+    "http2": "^3.3.7",
     "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^6.2.0",
-    "moment": "^2.29.4",
-    "next": "^12.3.4",
+    "moment": "2.29.4",
+    "net": "^1.0.2",
+    "next": "12.3.4",
     "nextjs-websocket": "^1.0.11",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -57,6 +64,7 @@
     "smart-webcomponents-react": "^15.2.11",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
+    "spdy-transport": "^3.0.0",
     "ws": "^8.13.0"
   },
   "devDependencies": {
