--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "net": "^1.0.2",
     "next": "12.3.4",
     "nextjs-websocket": "^1.0.11",
+    "pusher-js": "^8.3.0",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
