--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/node": "20.4.5",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
