--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^5.14.4",
     "@mui/x-date-pickers": "^6.11.0",
     "@prisma/client": "^5.0.0",
+    "@progress/kendo-data-query": "^1.6.0",
     "@progress/kendo-date-math": "^1.5.11",
     "@progress/kendo-licensing": "^1.3.1",
     "@progress/kendo-react-animation": "^5.16.1",
@@ -32,13 +33,14 @@
     "@progress/kendo-react-dialogs": "^5.16.1",
     "@progress/kendo-react-dropdowns": "^5.16.1",
     "@progress/kendo-react-form": "^5.16.1",
+    "@progress/kendo-react-grid": "^5.16.1",
     "@progress/kendo-react-inputs": "^5.16.1",
     "@progress/kendo-react-intl": "^5.16.1",
     "@progress/kendo-react-notification": "^5.16.1",
     "@progress/kendo-react-popup": "^5.16.1",
     "@progress/kendo-react-scheduler": "^5.16.1",
     "@progress/kendo-svg-icons": "^1.8.0",
-    "@progress/kendo-theme-default": "^6.6.0",
+    "@progress/kendo-theme-default": "^6.7.0",
     "@tabler/icons-react": "^2.29.0",
     "@types/gapi.auth2": "^0.0.57",
     "axios": "^1.4.0",
@@ -78,6 +80,7 @@
     "eslint-config-next": "13.4.12",
     "postcss": "^8.4.27",
     "prisma": "^5.0.0",
+    "sass": "^1.66.1",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   }
